--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/router": "^19.0.5",
     "@auth0/angular-jwt": "^5.2.0",
     "bootstrap": "^5.3.3",
+    "ng-angular-popup": "^0.6.6",
+    "ngx-sweetalert2": "^0.2.7",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.15.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
