--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/router": "^19.0.5",
     "@auth0/angular-jwt": "^5.2.0",
     "bootstrap": "^5.3.3",
+    "chartist": "^1.3.0",
+    "flowbite": "^2.5.2",
+    "jwt-decode": "^4.0.0",
     "ng-angular-popup": "^0.6.6",
     "ngx-sweetalert2": "^0.2.7",
     "rxjs": "~7.8.0",
@@ -33,13 +36,18 @@
     "@angular-devkit/build-angular": "^19.0.2",
     "@angular/cli": "^19.0.2",
     "@angular/compiler-cli": "^19.0.0",
+    "@types/chartist": "^0.11.1",
     "@types/jasmine": "~5.1.0",
+    "@types/jwt-decode": "^2.2.1",
+    "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2"
   }
 }
